hphp/test/zend/good/Zend/tests/constants/fixtures/folder3/subfolder4/fixture.php
<?hh

function folder3_sub4_fixture() {
echo __DIR__ . "\n";
echo dirname(__FILE__) . "\n";
}
